--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Todo App lets you handle your day better and achieve all of your daily todos."
     />
+    <meta name="description" property="og:description" content="Todo App lets you handle your day better and achieve all of your daily todos." />
+    <meta name="title" property="og:title" content="Todo App" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://i.ibb.co/hBgfCn8/todo-app-preview.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Todo App</title>
   </head>
